--- a/dht22/frontend/public/index.html
+++ b/dht22/frontend/public/index.html
@@ -9,14 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
+   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>React App</title>
+    <title>Temperatura e Umidade - ESP32 com DHT22</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Você necessita habilitar o JavaScript para executar este app.</noscript>
     <div id="root"></div>
     
   </body>
