--- a/dht22/frontend/public/index.html
+++ b/dht22/frontend/public/index.html
@@ -9,14 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
     <title>Temperatura e Umidade - ESP32 com DHT22</title>
   </head>
   <body>
-    <noscript>Você necessita habilitar o JavaScript para executar este app.</noscript>
+    <noscript
+      >Você necessita habilitar o JavaScript para executar este app.</noscript
+    >
     <div id="root"></div>
-    
   </body>
 </html>
