--- a/HTML_ESP32_JSON/index.html
+++ b/HTML_ESP32_JSON/index.html
@@ -40,17 +40,17 @@
     <h1>ESP32 – Retorno dos Endpoints - /esp32/api/temperatura</h1>
 
     <div class="card">
-        <h2>192.168.1.100</h2>
+        <h2>192.168.1.100 (SHT31-D)</h2>
         <pre id="esp100">Carregando...</pre>
     </div>
 
     <div class="card">
-        <h2>192.168.1.101</h2>
+        <h2>192.168.1.101 (SHT45)</h2>
         <pre id="esp101">Carregando...</pre>
     </div>
 
     <div class="card">
-        <h2>192.168.1.102</h2>
+        <h2>192.168.1.102 (DHT22)</h2>
         <pre id="esp102">Carregando...</pre>
     </div>
 
