--- a/HTML_ESP32_JSON/index.html
+++ b/HTML_ESP32_JSON/index.html
@@ -12,6 +12,7 @@
 
         h2 {
             margin-bottom: 5px;
+			color: black;
         }
 
         .card {
@@ -33,6 +34,10 @@
         .error {
             color: #ff5555;
         }
+		
+		.paren {
+        color: blue; /* azul */
+    }
     </style>
 </head>
 <body>
@@ -40,17 +45,17 @@
     <h1>ESP32 – Retorno dos Endpoints - /esp32/api/temperatura</h1>
 
     <div class="card">
-        <h2>192.168.1.100 (SHT31-D)</h2>
+        <h2>192.168.1.100 <span class="paren">(SHT45)</span></h2>
         <pre id="esp100">Carregando...</pre>
     </div>
 
     <div class="card">
-        <h2>192.168.1.101 (SHT45)</h2>
+        <h2>192.168.1.101 <span class="paren">(SHT31-D)</span></h2>
         <pre id="esp101">Carregando...</pre>
     </div>
 
     <div class="card">
-        <h2>192.168.1.102 (DHT22)</h2>
+        <h2>192.168.1.102 <span class="paren">(DHT22)</span></h2>
         <pre id="esp102">Carregando...</pre>
     </div>
 
@@ -83,7 +88,7 @@
         atualizarTodos();
 
         // atualiza a cada 15 segundos (15000 ms)
-        setInterval(atualizarTodos, 30000);
+        setInterval(atualizarTodos, 15000);
     </script>
 
 </body>
