--- a/HTML_ESP32_JSON/index.html
+++ b/HTML_ESP32_JSON/index.html
@@ -46,17 +46,17 @@
 	 <h2>Microcontroladores ESP32 - API /esp32/api/v1/temperatura (GET)</h2>
 
     <div class="card">
-        <h2>192.168.1.100 <span class="paren">(sensor SHT45) status: ativo</span></h2>
+        <h2>192.168.1.100 <span class="paren">(sensor SHT45 - PROD) status: ativo</span></h2>
         <pre id="esp100">Carregando...</pre>
     </div>
 
     <div class="card">
-        <h2>192.168.1.101 <span class="paren">(sensor SHT31-D) status: ativo</span></h2>
+        <h2>192.168.1.101 <span class="paren">(sensor SHT31-D - DEV) status: ativo</span></h2>
         <pre id="esp101">Carregando...</pre>
     </div>
 
     <div class="card">
-        <h2>192.168.1.102 <span class="paren">(sensor DHT22) status: ativo</span></h2>
+        <h2>192.168.1.102 <span class="paren">(sensor DHT22 - DEV) status: ativo</span></h2>
         <pre id="esp102">Carregando...</pre>
     </div>
 
