ajustes_page_monitor

--- a/HTML_ESP32_JSON/index.html
+++ b/HTML_ESP32_JSON/index.html
@@ -16,6 +16,7 @@ body {
 .header {
     text-align: center;
     padding: 30px 20px;
+    padding-bottom: 0px;
 }
 
 .header h1 {
@@ -33,8 +34,17 @@ body {
     margin: auto;
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(2, 1fr); /* sempre 2 colunas por padrão */
     gap: 25px;
+	 justify-content: center; /* centraliza os cards */
+}
+
+/* Responsividade: em telas menores que 750px, usar 1 coluna */
+@media (max-width: 750px) {
+    .container {
+        grid-template-columns: 1fr;
+		  justify-content: center; /* mantém centralizado em 1 coluna */
+    }
 }
 
 .card {
@@ -48,7 +58,8 @@ body {
 }
 
 .card h2 {
-    margin-top: 30px;
+    margin-top: 45px;
+	 text-align: center;
 }
 
 .card:hover {
@@ -62,7 +73,7 @@ body {
     transform: translateX(-50%);
     padding: 6px 14px;
     border-radius: 20px;
-    font-size: 12px;
+    font-size: 18px;
     font-weight: bold;
     text-transform: uppercase;
     display: flex;
@@ -74,19 +85,15 @@ body {
 .prod { background: #007bff; }
 .hml  { background: #6f42c1; }
 .dev  { background: #28a745; }
+.teste { background: #ff9900; } /* cor diferente para TESTE - SHT-45 */
 
 .status {
     display: flex;
     align-items: center;
+	 justify-content: left;  /* centraliza horizontalmente */
     margin-top: 10px;
     font-weight: bold;
-}
-
-.dot {
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    margin-right: 10px;
+	 font-size: 18px; /* aumento da fonte para os status */
 }
 
 @keyframes pulseGreen {
@@ -99,6 +106,13 @@ body {
     0% { box-shadow: 0 0 0 0 rgba(255,59,59,0.9); }
     70% { box-shadow: 0 0 0 10px rgba(255,59,59,0); }
     100% { box-shadow: 0 0 0 0 rgba(255,59,59,0); }
+}
+
+.dot {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    margin-right: 10px;
 }
 
 .active-dot {
@@ -115,18 +129,28 @@ pre {
     background: rgba(0,0,0,0.6);
     padding: 15px;
     border-radius: 12px;
-    font-size: 13px;
+    font-size: 14px;
     overflow-x: auto;
     margin-top: 15px;
     color: #00ff88;
     width: calc(95% + 5px);
-    margin-left: -10px;
+    margin-left: -7px;
+}
+
+.temp-umidade {
+    margin-top: 0px;
+    margin-bottom: 18px;
+    font-weight: bold;
+    font-size: 18px;
+    color: #00ffcc;
+	 text-align: center;
 }
 
 .footer {
     text-align: center;
     padding: 20px;
-    font-size: 12px;
+	 padding-top: 0px;
+    font-size: 14px;
     opacity: 0.8;
 }
 
@@ -134,37 +158,91 @@ pre {
     font-weight: bold;
     color: #00ffcc;
 }
+
+.header h1 {
+    margin: 0;
+    font-size: 36px;
+    font-weight: 900;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+
+.header .emoji {
+    font-size: 48px;
+}
+
+.header .title-text {
+    color: #00ffcc;
+    letter-spacing: 1px;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
+}
+
+.header p {
+    text-align: center;
+    font-size: 18px;
+    margin-top: 8px;
+    color: #ffffffcc;
+    font-style: italic;
+}
+
+.header p .emoji {
+    font-size: 20px;
+}
+
+.ip-text {
+    font-size: 22px;
+    font-weight: bold;
+}
+
 </style>
 </head>
 
 <body>
 
 <div class="header">
-    <h1>ESP32 HEALTH MONITOR</h1>
-    <p>Monitoramento em tempo real • Atualização automática</p>
+    <h1>
+        <span class="emoji">☀️🌧️</span> 
+        <span class="title-text">ESP32 Health Monitor</span> 
+        <span class="emoji">🌦️⛈️</span> 
+    </h1>
+    <p><span class="emoji">⚡</span>Monitoramento em tempo real<span class="emoji">⚡</span></p>
 </div>
 
 <div class="container">
 
     <div class="card">
         <div id="badge100" class="env-badge"></div>
-        <h2 id="titulo100">Carregando...</h2>
+        <h2 id="titulo100" class="ip-text">Carregando...</h2>
+        <div id="temp100" class="temp-umidade"></div>
         <div id="status100" class="status"></div>
         <pre id="esp100">Carregando...</pre>
     </div>
 
     <div class="card">
         <div id="badge101" class="env-badge"></div>
-        <h2 id="titulo101">Carregando...</h2>
+        <h2 id="titulo101" class="ip-text">Carregando...</h2>
+        <div id="temp101" class="temp-umidade"></div>
         <div id="status101" class="status"></div>
         <pre id="esp101">Carregando...</pre>
     </div>
 
     <div class="card">
         <div id="badge102" class="env-badge"></div>
-        <h2 id="titulo102">Carregando...</h2>
+        <h2 id="titulo102" class="ip-text">Carregando...</h2>
+        <div id="temp102" class="temp-umidade"></div> 
         <div id="status102" class="status"></div>
         <pre id="esp102">Carregando...</pre>
+    </div>
+
+    <div class="card">
+        <div id="badge103" class="env-badge"></div>
+        <h2 id="titulo103" class="ip-text">Carregando...</h2>
+        <div id="temp103" class="temp-umidade"></div> 
+        <div id="status103" class="status"></div>
+        <pre id="esp103">Carregando...</pre>
     </div>
 
 </div>
@@ -175,19 +253,17 @@ pre {
 
 <script>
 
-const sensores = ["192.168.1.100", "192.168.1.101", "192.168.1.102"];
+const sensores = ["192.168.1.100", "192.168.1.101", "192.168.1.102", "192.168.1.103"];
 let sensoresInativos = new Set();
 let tempoRestante = 15;
 let atualizando = false;
 
-/* ===== FETCH COM TIMEOUT ===== */
 function fetchComTimeout(url, timeout = 2000) {
     const controller = new AbortController();
     const timer = setTimeout(() => controller.abort(), timeout);
     return fetch(url, { signal: controller.signal }).finally(() => clearTimeout(timer));
 }
 
-/* ===== AMBIENTE ===== */
 function definirAmbiente(ip, badgeId) {
     const ultimo = ip.split(".").pop();
     const badge = document.getElementById(badgeId);
@@ -195,9 +271,9 @@ function definirAmbiente(ip, badgeId) {
     if (ultimo === "100") { badge.innerHTML = 'PRODUÇÃO • SHT45'; badge.className = "env-badge prod"; }
     else if (ultimo === "101") { badge.innerHTML = 'HOMOLOGAÇÃO • SHT31-D'; badge.className = "env-badge hml"; }
     else if (ultimo === "102") { badge.innerHTML = 'DESENVOLVIMENTO • DHT22'; badge.className = "env-badge dev"; }
+    else if (ultimo === "103") { badge.innerHTML = 'TESTE • SHT-45'; badge.className = "env-badge teste"; }
 }
 
-/* ===== STATUS ===== */
 function setStatus(isActive, statusId, ip) {
     const status = document.getElementById(statusId);
     if (isActive) {
@@ -209,7 +285,6 @@ function setStatus(isActive, statusId, ip) {
     }
 }
 
-/* ===== CARREGAR SENSOR ===== */
 async function carregar(ip) {
     const ultimo = ip.split(".").pop();
     const url = `http://${ip}/esp32/api/temperatura`;
@@ -222,26 +297,33 @@ async function carregar(ip) {
         document.getElementById(`titulo${ultimo}`).textContent = ip;
         setStatus(true, `status${ultimo}`, ip);
         document.getElementById(`esp${ultimo}`).textContent = JSON.stringify(json, null, 2);
+
+        if (json.temperatura_celsius != null && json.umidade != null) {
+            document.getElementById(`temp${ultimo}`).textContent =
+                `🌡️ ${json.temperatura_celsius.toFixed(2)}° C • 💧 ${json.umidade.toFixed(2)} %`;
+        } else {
+            document.getElementById(`temp${ultimo}`).textContent = '';
+        }
+
     } catch {
         definirAmbiente(ip, `badge${ultimo}`);
         document.getElementById(`titulo${ultimo}`).textContent = ip;
         setStatus(false, `status${ultimo}`, ip);
         document.getElementById(`esp${ultimo}`).textContent = "Sem resposta.";
+        document.getElementById(`temp${ultimo}`).textContent = '';
     }
 }
 
-/* ===== ATUALIZAR TODOS (NÃO RESETAR O CONTADOR PARA OFFLINE) ===== */
 async function atualizarTodos() {
     if (atualizando) return;
     atualizando = true;
     for (const ip of sensores) {
         await carregar(ip);
     }
-    tempoRestante = 15; // só reseta no ciclo normal
+    tempoRestante = 15;
     atualizando = false;
 }
 
-/* ===== CONTADOR ===== */
 setInterval(() => {
     tempoRestante--;
     if (tempoRestante < 0) tempoRestante = 0;
@@ -250,19 +332,17 @@ setInterval(() => {
     if (tempoRestante === 0) atualizarTodos();
 }, 1000);
 
-/* ===== MONITOR RÁPIDO DE SENSORES OFFLINE ===== */
 setInterval(() => {
     sensoresInativos.forEach(async ip => {
         try {
             const res = await fetchComTimeout(`http://${ip}/esp32/api/temperatura`, 2000);
             if (res.ok) {
-                await carregar(ip); // apenas recarrega o sensor
+                await carregar(ip);
             }
         } catch {}
     });
 }, 5000);
 
-/* ===== START ===== */
 atualizarTodos();
 
 </script>
