--- a/HTML_ESP32_JSON/index.html
+++ b/HTML_ESP32_JSON/index.html
@@ -15,7 +15,7 @@ body {
 
 .header {
     text-align: center;
-    padding: 30px 20px;
+    padding: 5px 20px;
     padding-bottom: 0px;
 }
 
@@ -35,7 +35,7 @@ body {
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* sempre 2 colunas por padrão */
-    gap: 25px;
+    gap: 10px;
 	 justify-content: center; /* centraliza os cards */
 }
 
@@ -55,6 +55,7 @@ body {
     position: relative;
     box-shadow: 0 10px 30px rgba(0,0,0,0.3);
     transition: 0.3s;
+	 height: 320px;
 }
 
 .card h2 {
